working image dataflow, comments to cleanup

--- a/project/poliaktor_server/templates/index.html
+++ b/project/poliaktor_server/templates/index.html
@@ -12,7 +12,7 @@
         <div class="wrapper">
             <div>
                 <h1>Video from webCam</h1>
-                <video autoplay="true" id="videoElement"></video>
+                <video id="videoElement"></video>
             </div>
             <div>
                 <h1>Video on Canvas</h1>
