video hiden, bounding box added

--- a/project/poliaktor_server/templates/index.html
+++ b/project/poliaktor_server/templates/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
         <div class="wrapper">
-            <div>
+            <div style="display: none;">
                 <h1>Video from webCam</h1>
                 <video id="videoElement"></video>
             </div>
