development button added

--- a/project/poliaktor_server/templates/index.html
+++ b/project/poliaktor_server/templates/index.html
@@ -9,7 +9,8 @@
     <title>I know ya face</title>
 </head>
     <body>
-        <div class="wrapper">
+    <div id="outer-div">
+        <div id="inner-div" class="wrapper">
             <div style="display: none;">
                 <h1>Video from webCam</h1>
                 <video id="videoElement"></video>
@@ -23,5 +24,7 @@
                 <img alt="" />
             </div>
         </div>
+        <button id="dev_button" value="false" type="button">Start/Stop</button>
+    </div>
     </body>
 </html>
