--- a/poliaktor_server/templates/index.html
+++ b/poliaktor_server/templates/index.html
@@ -16,8 +16,8 @@
                 <input id="dev_input" type="number" name="points" value="15" step="1">
                 <p id="actor-name"></p>
             </div>
-            <img id="actor-img" class="vertical" alt="" />
-            <canvas id="canvasElement" class="vertical"></canvas>
+            <img id="actor-img" class="vertical picture" alt="" />
+            <canvas id="canvasElement" class="vertical picture"></canvas>
         </div>
         <div id="img-div">
             <img id="plot-img" alt="" />
