--- a/poliaktor_server/templates/index.html
+++ b/poliaktor_server/templates/index.html
@@ -11,13 +11,26 @@
     <video id="videoElement"></video>
     <div id="outer-div">
         <div id="inner-div" class="wrapper">
-            <div id="control-div" class="vertical">
-                <button id="dev_button" value="false" type="button">Reset</button>
+            <h1>I know ya face! Or not...</h1>
+            <h3>The app can handle up to one person smiling at the camera</h3>
+            <h3>Wait to see what it'll bring you</h3>
+            <hr>
+            <h3>We think you are the most similar to:</h3>
+            <h1 id="actor-name"></h1>
+            <div id="control-div" class="horizontal">
+                <button id="dev_button" value="false" type="button">Reset plot</button>
                 <input id="dev_input" type="number" name="points" value="15" step="1">
-                <p id="actor-name"></p>
             </div>
             <img id="actor-img" class="vertical picture" alt="" />
             <canvas id="canvasElement" class="vertical picture"></canvas>
+            <div id="info-div" class="horizontal">
+                <img id="qr-code" src="{{ url_for('static', filename='qr.png') }}"/>
+                <div id="text-info-div" class="bottom-aligned">
+                    <p>Powered by Dawid Stelmach and Piotr Pasza Storozenko</p>
+                    <hr>
+                    <p>If you want to find out more scan QR code and look for BiModal</p>
+                </div>
+            </div>
         </div>
         <div id="img-div">
             <img id="plot-img" alt="" />
